Add agent tests
# Conflicts:
#	src/main/java/api/requests/skelethon/Endpoint.java
#	src/main/java/api/specs/ResponseSpecs.java
#	src/test/java/api/BaseTest.java