@@ -2,6 +2,7 @@ package api;
 
 import api.models.error.ErrorResponse;
 import common.errors.HasMessage;
+import common.extensions.AgentExtension;
 import common.extensions.AuthUserExtension;
 import common.extensions.ProjectCleanupExtension;
 import io.restassured.response.ValidatableResponse;
@@ -10,7 +11,10 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
 
+
 @ExtendWith({AuthUserExtension.class, ProjectCleanupExtension.class})
+@ExtendWith(AuthUserExtension.class)
+@ExtendWith(AgentExtension.class)
 public class BaseTest {
     protected SoftAssertions softly;
 
@@ -30,8 +34,14 @@ public class BaseTest {
 
     protected <E extends Enum<E> & HasMessage> void assertErrorMessage(
             ErrorResponse errorResponse, E expected) {
-        softly.assertThat(errorResponse.getErrors().getFirst().getMessage())
+        softly.assertThat(errorResponse.getErrors().get(0).getMessage())
                 .as("Проверка сообщения алерта")
                 .isEqualTo(expected.getMessage());
+    }
+
+    protected void assertErrorMessage(ErrorResponse errorResponse, String expectedMessage) {
+        softly.assertThat(errorResponse.getErrors().get(0).getMessage())
+                .as("Проверка сообщения алерта")
+                .isEqualTo(expectedMessage);
     }
 }
